syntax = "proto3";


package apiGRPC;

option go_package = "/grpc";

import "google/api/annotations.proto";

service Fib{    
    rpc GetFib(FibRequest) returns (FibResponse) {
        option (google.api.http) = {
            post: "/api/v1/fib"
            body: "*"
        };
    }
}

message FibRequest {
    int32 x = 1;
    int32 y = 2;
}

message FibResponse {
    repeated string fibList = 1;
}